--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,10 @@ body,
   width: 100vw;
   height: 100vh;
 }
+
+.active-box {
+  grid-column: span 2 / span 2;
+  grid-row: span 2 / span 2;
+  grid-column-start: 1;
+  grid-row-start: 1;
+}
